--- a/c/index.html
+++ b/c/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+
 <head>
     <title>Hello (Again) World</title>
     <script src="../node_modules/cesium/Build/Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="../node_modules/cesium/Build/Cesium/Widgets/widgets.css">
     <style>
-        html, body, #cesiumContainer {
+        html,
+        body,
+        #cesiumContainer {
             width: 100%;
             height: 100%;
             margin: 0;
@@ -13,17 +16,44 @@
         }
     </style>
 </head>
+
 <body>
-<div id="cesiumContainer" class="fullSize"></div>
-<script>
-  var viewer = new Cesium.Viewer('cesiumContainer', {
-//    禁止选择图层工具
-    baseLayerPicker: false,
-    imageryProvider: new Cesium.UrlTemplateImageryProvider({
-      url: 'https://www.google.cn/maps/vt?lyrs=s@189&gl=cn&x={x}&y={y}&z={z}',
-      enablePickFeatures: false,
-      maximumLevel: 20
-    })
-  });
-</script>
+    <div id="cesiumContainer" class="fullSize"></div>
+    <script>
+        var viewer = new Cesium.Viewer('cesiumContainer', {
+            //    禁止选择图层工具
+            baseLayerPicker: false,
+            imageryProvider: new Cesium.UrlTemplateImageryProvider({
+                url: 'https://www.google.cn/maps/vt?lyrs=s@189&gl=cn&x={x}&y={y}&z={z}',
+                enablePickFeatures: false,
+                maximumLevel: 20
+            }),
+            // terrainProvider: new Cesium.CesiumTerrainProvider({
+            //     url: 'https://terrain.flightradar24.com/terrain'
+            // })
+        });
+
+        // viewer.entities.add({
+        //     name: 'Rotating rectangle with rotating texture coordinate',
+        //     show: false,
+        //     rectangle: {
+        //         coordinates: Cesium.Rectangle.fromDegrees(73.14, 14.23, 135.57, 54.69),
+        //         material: './zyf1.png',
+        //     }
+        // });
+
+        var layers = viewer.scene.imageryLayers;
+        console.log(layers._layers[0].brightness)
+
+        layers._layers[0].brightness = 0.7;
+        // layers._layersp[0].brightness = 2.0;
+
+        var radar = layers.addImageryProvider(new Cesium.SingleTileImageryProvider({
+            url: './zyf1.png',
+            rectangle: Cesium.Rectangle.fromDegrees(73.14, 14.23, 135.57, 54.69)
+        }));
+        radar.alpha = 0.3;
+        radar.brightness = 1.5;
+        console.log(layers)
+    </script>
 </body>
